--- a/website/index.html
+++ b/website/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Nikolas Hoffman | Software Engineer</title>
 </head>
 <body>
+    <!--HEADER-->
+    <div id="page-header">
+        <!--LOGO-->
+
+        <!--NAV-->
+    </div>
+    <!--MAIN-->
+    <div id="page-main"></div>
+        <!--HERO-->
+    <!--FOOTER-->
+
     
 </body>
 </html>
