--- a/website/index.html
+++ b/website/index.html
@@ -10,14 +10,71 @@
     <!--HEADER-->
     <div id="page-header">
         <!--LOGO-->
+        <h2>
+            <img src="img/profile.jpg" alt="profile picture">
+            Name | Portfolio
+        </h2>
 
         <!--NAV-->
+        <nav>
+            <ul>
+                <li><a href="#"></a>Pricing</li>
+                <li><a href="#"></a>About</li>
+                <li><a href="#"></a>Sign Up</li>
+            </ul>
+        </nav>
     </div>
-    <!--MAIN-->
-    <div id="page-main"></div>
-        <!--HERO-->
-    <!--FOOTER-->
 
-    
+    <!--MAIN-->
+    <div id="page-main">
+
+        <!--HERO-->
+        <div class="hero">
+            <div class="hero-content">
+                <h1 class="hero-title">
+                    Place for Title
+                </h1>
+                <p>
+                    This is where we will add more words.
+                </p>
+            </div>
+
+        </div>
+
+        <!--SERVICES-->
+        <div class="site-section">
+            <div class="section-header">
+                <h2>Key Services</h2>
+            </div>
+
+            <div class="service-box">
+                <img src="img/stocks.png" alt="stocks">
+                <h4></h4>
+                <p></p>
+            </div>
+
+            <div class="service-box">
+                <img src="img/mj.png" alt="marijuana leaf">
+                <h4></h4>
+                <p></p>
+            </div>
+
+            <div class="service-box">
+                <img src="img/bitcoin.png" alt="bitcoin">
+                <h4></h4>
+                <p></p>
+            </div>
+                    
+
+        </div>
+
+
+    </div>
+
+    <!--FOOTER-->
+    <div id="page-footer">
+
+    </div>
+
 </body>
 </html>
