--- a/website/index.html
+++ b/website/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Nikolas Hoffman | Software Engineer</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!--HEADER-->
@@ -49,32 +50,95 @@
 
             <div class="service-box">
                 <img src="img/stocks.png" alt="stocks">
-                <h4></h4>
-                <p></p>
+                <h4>Equity Investing</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas quis pharetra nulla. 
+                Curabitur placerat egestas luctus. Nulla facilisi. Integer volutpat pharetra turpis, 
+                et aliquam augue varius vel. Pellentesque ut dui gravida felis malesuada dignissim eu ac neque. 
+                Quisque eu nisi condimentum, feugiat ante sed, ultrices tellus.
+                </p>
             </div>
 
             <div class="service-box">
                 <img src="img/mj.png" alt="marijuana leaf">
-                <h4></h4>
-                <p></p>
+                <h4>Cannabis Connoiseur</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas quis pharetra nulla. 
+                Curabitur placerat egestas luctus. Nulla facilisi. Integer volutpat pharetra turpis, 
+                et aliquam augue varius vel. Pellentesque ut dui gravida felis malesuada dignissim eu ac neque. 
+                Quisque eu nisi condimentum, feugiat ante sed, ultrices tellus.
+                </p>
             </div>
 
             <div class="service-box">
                 <img src="img/bitcoin.png" alt="bitcoin">
-                <h4></h4>
-                <p></p>
+                <h4>Crypto Investing</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas quis pharetra nulla. 
+                Curabitur placerat egestas luctus. Nulla facilisi. Integer volutpat pharetra turpis, 
+                et aliquam augue varius vel. Pellentesque ut dui gravida felis malesuada dignissim eu ac neque. 
+                Quisque eu nisi condimentum, feugiat ante sed, ultrices tellus.
+                </p>
             </div>
                     
 
         </div>
 
+        <!--ABOUT-->
+        <div class="section-header about">
+            <h2>About Me</h2>
+            <p>I AM THE GREATEST!</p>
+        </div>
+
+        <!--TESTIMONIALS-->
+    <section class="testimonials-section testimonials-section-secondary">
+        <div class="testimonials-section-inside">
+            <div class="section-header">
+                <h2>Testimonials</h2>
+            </div>
+
+            <div class="testimonial-box">
+                <div class="testimonial-content">
+                    This is where you would put a customer or mentor testimonial regarding the work that 
+                    you've done or product you've provided. 
+                </div>
+                <div class="testimonial-author">
+                    <img src="img/avatar2.png" alt="male avatar">
+                    <h5>John Doe</h5>
+                    <span>Title</span>
+                </div>
+            </div>
+
+            <div class="testimonial-box">
+                    <div class="testimonial-content">
+                        This is where you would put a customer or mentor testimonial regarding the work that 
+                        you've done or product you've provided. 
+                    </div>
+                    <div class="testimonial-author">
+                        <img src="img/avatar1.png" alt="female avatar">
+                        <h5>Jane Doe</h5>
+                        <span>Title</span>
+                    </div>
+                </div>
+
+                <div class="testimonial-box">
+                        <div class="testimonial-content">
+                            This is where you would put a customer or mentor testimonial regarding the work that 
+                            you've done or product you've provided. 
+                        </div>
+                        <div class="testimonial-author">
+                            <img src="img/avatar0.png" alt="male avatar">
+                            <h5>Juan Doe</h5>
+                            <span>Title</span>
+                        </div>
+                    </div>
+        </div>
+    </section>
 
     </div>
 
     <!--FOOTER-->
-    <div id="page-footer">
-
-    </div>
+    <footer id="footer">
+        <img src="img/profile.jpg" alt="profile picture">
+        <span>My Portfolio<br />&copy; 2021</span>
+    </footer>
 
 </body>
 </html>
