--- a/website/index.html
+++ b/website/index.html
@@ -9,22 +9,22 @@
 </head>
 <body>
     <!--HEADER-->
-    <div id="page-header">
+    <header>
         <!--LOGO-->
-        <h2>
+        <h2 id="page-header">
             <img src="img/profile.jpg" alt="profile picture">
             Name | Portfolio
         </h2>
 
         <!--NAV-->
-        <nav>
+        <nav id="main-navigation">
             <ul>
                 <li><a href="#"></a>Pricing</li>
                 <li><a href="#"></a>About</li>
                 <li><a href="#"></a>Sign Up</li>
             </ul>
         </nav>
-    </div>
+    </header>
 
     <!--MAIN-->
     <div id="page-main">
